--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -344,7 +344,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "placeholder"
+    "#### **[Introduction](#activedirintroduction)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **[Introduction to Active Directory](#introtoactivedir)**\n",
+    "* **[Setup](#advmsetup)**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **[Initial Attack Vectors](#activedirinattckvectors)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **[Link Local Multitask Name Resolution](#adllmnr)**\n",
+    "* **[SMB Relay Attacks](#adsmbrelayattcks)**"
    ]
   },
   {
@@ -7824,8 +7848,280 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "placeholder"
+    "Active Directory is a services used to manage Windows domain networks. Information is stored in objects, like computers, users, printers, etc. AD is essentially an identity management service, where authentication is handled by Kerberos and Kerberos tickets. Non-Windows machines can authenticate to AD using RADIUS or LDAP."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedirintroduction\"></a>\n",
+    "\n",
+    "### **`Introduction`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"introtoactivedir\"></a>\n",
+    "\n",
+    "#### **`Introduction to Active Directory`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<u>Physical Components</u>**\n",
+    "\n",
+    "Physical components in Active Directory are tangible or infrastructure-related elements. The following are the main physical components:\n",
+    "\n",
+    "* **`AD Domain Services (AD DS)`:** The core services that stores directory data and manages communication between users and domains. \n",
+    "\n",
+    "* **`Domain Controllers (DCs)`:** Servers that host AD DS and handle authentication, authorization, and directory lookups. These servers essentially control everything in AD, and they have the ability to do administrative actions, like set group policies or change passwords. \n",
+    "\n",
+    "* **`Global Catalog Server`:** A domain controller that stores a partial replica of all objects in the forest, enabling faster searches across domains.\n",
+    "\n",
+    "* **`Read-Only Domain Controller (RODC)`:** A domain controller that hosts a read-only copy of the AD database, often used in remote or less secure locations.\n",
+    "\n",
+    "* **`AD Data Store`:** The physical database that stores all the directory data for AD DS. This is implemented as the NTDS.fit file, which resides on the domain controllers. This file also contains user accounts, group memberships, computer accounts, security policies, password hashes, schema, and configuration data. \n",
+    "\n",
+    "* **`AD Certificate Services (AD CS)`:** Issues and manages digital certificates for secure communication. This is used to verify identities in a domain controller, and enhances security through LDAPS. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Logical Components</u>**\n",
+    "\n",
+    "Logical components define the structure and organization of objects within Active Directory. The following are the main logical components:\n",
+    "\n",
+    "**`Partitions`:** Used to divide the AD database into sections to improve manageability, replication, and performance. Each partition stores specific types of data and is replicated differently across domain controllers.\n",
+    "\n",
+    "**`Schema`:** Defines the types of objects and their attributes. Every type of object that can be stored in a directory is defined in a schema. Schemas enforce rules regarding object creation and configuration. \n",
+    "\n",
+    "**`Objects`:** Individual entities in AD, such as users, groups, computers, printers, and shared folders. More specifically, **Class Objects** are created in the directory, like a user or a computer, and they are then assigned attributes, which is attached information. Objects live within **Organizational Units.** \n",
+    "   * **User:** Enables network resource access for a user\n",
+    "   * **InetOrgPerson:** Similar to a user account, but used for compatibility with other directory services\n",
+    "   * **Contacts:** Used primarily to assign e-mail addresses to external users, but does not enable network access\n",
+    "   * **Groups:** Used to simplify the administration of access control\n",
+    "   * **Computers:** Enables authentication and auditing of computer access to resources\n",
+    "   * **Printers:** Used to simplify the process of locating and connecting to printers\n",
+    "   * **Shared Folders:** Enables users to search for shared folders based on properties\n",
+    "\n",
+    "**`Organization Units (OU)`:** Containers used to group objects for easier management and policy application. They are used to manage a collection of objects in a consistent way, apply policies, delegrate permissions to administer groups of objects, and represent the organization hierarchically and logically.\n",
+    "\n",
+    "**`Domains`:** Logical groupings of objects that share a common directory database; they are used to manage and maintain objects. There may be several domains in a tree. \n",
+    "\n",
+    "**`Domain Trees`:** A hierarchy (collection) of domains with a parent-child relationship. Domain trees can have additional child domains and a two way transitive trust between the domains. \n",
+    "\n",
+    "**`Forests`:** A collection of domain trees that share a common schema, global catalog, and configuration path. Forests enable trust between all domains in the forest. \n",
+    "\n",
+    "**`Sites`:** Represent the physical topology of the network, used to optimize replication and authentication traffic. \n",
+    "\n",
+    "**`Trust`:** Relationships between domains that allow users in one domain to access resources in another. All domains in a forest trust all other domains in the forest.\n",
+    "   * **Directional Trust:** The trust direction flows from trusting domain to the trusted domain\n",
+    "   * **Transitive Trust:** The trust relationship is extended beyond a two-domain trust to include other trusted domains. If two parent domains share trust, the child domains will be included \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Protocols</u>**\n",
+    "\n",
+    "**`Kerberos`:** The primary authentication protocol used in AD for secure and fast authentication\n",
+    "\n",
+    "**`Lightweight Directory Access Protocol (LDAP)`:** Used to query and modify the directory service\n",
+    "\n",
+    "**`RADIUS`:** Used for network access authentication, often in conjunction with VPNs or wireless networks\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Services</u>**\n",
+    "\n",
+    "**`AD Federation Services (AD FS)`:** Provides SSO capabilities for applications across organizational boundaries\n",
+    "\n",
+    "**`AD Rights Management Services (AD RMS)`:** Protects sensitive information through encryption and access control\n",
+    "\n",
+    "**`Replication Services`:** Ensures that changes made on one domain controller are propagated to others"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"advmsetup\"></a>\n",
+    "\n",
+    "#### **`Setup `**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Assign Domain Controller**\n",
+    "1. In Server Manager, go to the manage drop-down menu > Add Roles and Features\n",
+    "2. Select Role-based or feature-based installation\n",
+    "3. Next on appropriate machine\n",
+    "4. Select AD Domain Services (AD DS) > Add features\n",
+    "5. Next on everything, then mark restart the destination server automatically if required \n",
+    "6. In the results, under AD DS, select Promote this server to a domain controller\n",
+    "7. Add a new forest, with a root name of anything.local\n",
+    "8. Create a password\n",
+    "\n",
+    "All the DB folders, log files, and SYSVOL folders are in the `C:\\Windows\\` directory: NTDS for DB and logs and SYSVOL for SYSVOL\n",
+    "   * After the reboot, the login screen screen should now  domain\\Administrator\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Start Certificate Service**\n",
+    "1. Manage drop down > Add roles and features\n",
+    "2. Select Role-based or feature-based installation\n",
+    "3. Select next on the  appropriate machine\n",
+    "4. Select AD Certificate Services\n",
+    "5. Next on everything, then mark restart the destination server automatically if required \n",
+    "6. In the results, under AD CS, select Configure Active Directory Certificate Services on the destination server\n",
+    "7. For the defaults (insecure):\n",
+    "   * Select Certificate Authority\n",
+    "      * Enterprise CA\n",
+    "      * Root CA\n",
+    "      * Create a new private key\n",
+    "      * SHA256\n",
+    "      * Leave CA name the same\n",
+    "      * Change validity for 99 years \n",
+    "      * reboot server\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Add Users**\n",
+    "1. Go to Windows Server\n",
+    "2. On Server Manager > Tools drop down > AD Users and Computers\n",
+    "3. Different OUs separated by folders \n",
+    "   * In the user OU, Domain Admins and Enterprise Admins are the biggest targets\n",
+    "4. Right click on Domain Controller, where all of the OUs are dropping down from\n",
+    "   * New > Organizational Unit > Groups\n",
+    "5. In the Users OU, select all of the groups into the new Groups OU except the Administrator and Guest\n",
+    "6. To create a new user with the same permissions, right click on the user and select copy\n",
+    "   * To look into permissions, double click user\n",
+    "7. Set up profile \n",
+    "   * For security reasons, password never expires should not be checked\n",
+    "8. For completely new users\n",
+    "   * Right click on white space > New > User\n",
+    "9. Set up profile\n",
+    "   * User should have to reset password on set up\n",
+    "   * Password should expire \n",
+    "\n",
+    "<br>\n",
+    "   \n",
+    "**Start Service**\n",
+    "1. setspn -a COMPUTER_NAME-DC/service.DomainController.local:PORT DOMAIN\\service\n",
+    "2. Should say updated object\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Setting up Groups**\n",
+    "1. After the VM of the endpoints are ready, or when the local machines are ready, proceed --> remove floppy disk on vmware\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Set Policies for Entire Domain**\n",
+    "1. Search for Group Policy Management in start menu \n",
+    "2. Right click on Domain Controller and select Create a GPO in this domain, and Link it here..\n",
+    "3. Name GPO and right click to edit\n",
+    "4. Edit either Computer Configuration or User Configuration\n",
+    "5. Right click on policy after editing then select enforce \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Joining Machines to Domain:** Using the Domain Controller as a DNS Server \n",
+    "1. Control Panel > Network and Internet > Network and Sharing Center\n",
+    "2. Change Adapter Settings\n",
+    "3. Ethernet0 > Properties > Internet Protocol Version 4 (TCP/IPv4)\n",
+    "4. Use the following DNS server addresses\n",
+    "   * Input the Domain Controller IP address\n",
+    "5. In the start menu, search Access work or school\n",
+    "6. Join this device to a local AD Domain\n",
+    "7. Input Domain Controller\n",
+    "8. Join a domain using the proper credentials\n",
+    "9. To confirm that the machines joined, go to the Server Manager on the Domain Controller > Tools > AD Users and computers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedirinattckvectors\"></a>\n",
+    "\n",
+    "### **`Initial Attack Vectors`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"adllmnr\"></a>\n",
+    "\n",
+    "#### **`Link Local Multitask Name Resolution (LLMNR)`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LLMNR, previously called NBT-NS, is a protocol used to identify hosts when DNS fails. When traffic is being intercepted on an AD network that uses LLMNR, a username and NTMLv2 hash can be captured if appropriately responded to. This attack is likely to work, especially during a time when many people are logging on to their devices, because LLMNR is enabled by default in many networks. This attack works as follows:\n",
+    "1. Victim tries to access shared folder, but misspells the name of the folder\n",
+    "2. The server does not understand the misspelling \n",
+    "3. The victim sends a broadcast message, asking anyone on the local network if they know how to reach the misspelled folder\n",
+    "4. The attacker intercepts this request via a MiTM attack, telling the victim to send over its hash in order to \"connect\" them with the shared folder\n",
+    "5. The attacker cracks the hash offline\n",
+    "\n",
+    "To execute this attack, listen to traffic on  `responder`:\n",
+    "```bash\n",
+    "sudo responder -I <interface> -dP\n",
+    "\n",
+    "```\n",
+    "When a significant event occurs, a hash will be output to the responder listener. Beginning from the username, copy the entire hash and save it to a file; the exact hash type will be shown on the screen. Now, find the module number associated with the received hash; the following assumes NTLM:\n",
+    "```bash\n",
+    "hashcat --help | grep NTLM\n",
+    "```\n",
+    "Crack the hash:\n",
+    "```bash\n",
+    "hashcat -m 5600 saved_hash.txt /usr/share/wordlist/rockyou.txt --force\n",
+    "\n",
+    "```\n",
+    "The best defense to LLMNR poisoning is to disable LLMNR and NBT-NS. \n",
+    "\n",
+    "* **Disable LLMNR**\n",
+    "   1. Go to Windows Server\n",
+    "   2. Enter Group Policy Management\n",
+    "   3. Edit an existing policy (Default Domain Policy)\n",
+    "   4. See the drop down menu under **Policies,** then the drop down menu in **Administrative Template,** and then click on **Network**\n",
+    "   5. Select DNS Client\n",
+    "   6. Enable **Turn off multicast name resolution,** and push it out to the network\n",
+    "\n",
+    "* **Disable NBT-NS**\n",
+    "   1. Network Connections \n",
+    "   2. Network Adaprter Properties \n",
+    "   3. TCP/IPv4 Properties\n",
+    "   4. Advanced\n",
+    "   5.  WINS tab and select \"Disable NetBIOS over TCP/IP\"\n",
+    "\n",
+    "* **If neither option is possible, then follow the best practices:**\n",
+    "   * Implement a password policy, forcing users to have long and complex passwords\n",
+    "   * Require Network Access Control\n",
+    "   * Permission settings should have to allow a device onto a network, instead of letting  unknown devices connect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"adsmbrelayattcks\"></a>\n",
+    "\n",
+    "#### **`SMB Relay Attacks`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
