--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -557,7 +557,8 @@
     "* **[User Privileges](#sqlplususerprivileges)**\n",
     "   * **[System Privileges](#sqlplussystemprivileges)**\n",
     "   * **[Object Privileges](#sqlplusobjectprivileges)**\n",
-    "* **[User Roles](#sqlplususerroles)**"
+    "* **[User Roles](#sqlplususerroles)**\n",
+    "* **[Virtual Private Databases](#sqlplusvirtualprivdbs)**"
    ]
   },
   {
@@ -13751,6 +13752,137 @@
     "SELECT PRIVILEGE \n",
     "FROM dba_sys_privs\n",
     "WHERE grantee='{ DBA | CONNECT | RESOURCE }';\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"sqlplusvirtualprivdbs\"></a>\n",
+    "\n",
+    "### **`Virtual Private Databases`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Virtual Private Database is a shared database schema containing data that belongs to many different users, and each user can view or update only the data they own. VPDs controls data access at the row or column level, enabling row-level security and fine-grained access control (FGAC). \n",
+    "\n",
+    "The shared database schema contains data that belongs to different users, allowing a user view and users can only update the data they own. Essentially, one database serves multiple unrelated groups or entities. One of the simplest ways to filter data is through views. View object limits what users can see and do with existing data, hiding columns or rows from users:\n",
+    "```sql\n",
+    "CREATE VIEW view_name AS\n",
+    "SELECT column, column, column, \n",
+    "FROM db.table;\n",
+    "```\n",
+    "If data is not necessarily sensitive but should be masked, views are useful. Using views to restrict access is really a pseudo VPD and an old way to restrict access; they are easy to implement, but hard to administer.\n",
+    "\n",
+    "A more secure solution to restrict data access is a VPD. VPD is more secure because the protection is at the data level and the WHERE clause is appended by the Oracle kernel. Views, however, may enable a user to access the base data in the view and bypass the set up security. \n",
+    "   * For example, a table contains 5,000 customer records. Using views, a DBA would need to create 5,000 views to have customers access their own records. Using VPD, this can be done using a single policy function, also simplifying administration. \n",
+    "\n",
+    "**Application Context** is used to profine fine-grain access in VPDs and in general. Application context, or functionality specific to Oracle, allows a DBA to set database application variables that can be retrieved by database sessions. This is essentially a set of (name, value) pairs, where the name is the name of a variable/attribute, and a variable is used for security context-based or user-defined environmental attributes. There are several advantages to using application context:\n",
+    "* Part of the VPD mechanism and VPD setup\n",
+    "* Used to cache data, so that it's easily retrievable from memory and a database doesn't have to go back to the database and run a query.\n",
+    "   * Allows quick retrieval out of memory, putting less of a load on the database. \n",
+    "\n",
+    "`USERENV` is a variable in Oracle. It is a namespace that helps programmers and applications that are running against the database get basic information in the application, have that stored in memory. The application context function `SYS_CONTEXT` is also built in Oracle, often used to return the value of a parameter associated with a context namespace. Consider the following examples:\n",
+    "```sql\n",
+    "SELECT SYS_CONTEXT ('USER_ENV', 'DB_NAME') FROM DUAL;\n",
+    "\n",
+    "SELECT SYS_CONTEXT ('USER_ENV', 'SESSION_USER') FROM DUAL;\n",
+    "```\n",
+    "`DUAL` is a dummy, one-row table that allows users to retrieve single information from Oracle and built-in default information like timestamps, database name, and session user.\n",
+    "\n",
+    "To create an application context, the standard syntax must be used, a namespace must be provided, and a PL/SQL package must be used:\n",
+    "```sql\n",
+    "CREATE CONTEXT empno_ctx\n",
+    "   USING set_empno_ctx_pkg;\n",
+    "\n",
+    "```\n",
+    "To restirct access with a view, application context, and trigger, the following sample code can be used:\n",
+    "```sql\n",
+    "CREATE OR REPLACE VIEW order_view AS\n",
+    "   SELECT order_id, order_date, customer_id, order_amount\n",
+    "   FROM dbsec.orders\n",
+    "   WHERE stl_rec_stat <= to_number(sys_context('ORDERS_APP', 'SECURITY_LEVEL'));\n",
+    "```\n",
+    "In this case, SECURITY_LEVEL sets the security level, retrieving a user's security level from the context and using it. Users in higher security levels can access rows/columns in lower security levels. At this point, an application context can eb created:\n",
+    "```sql\n",
+    "CREATE OR REPLACE orders_app USING dbsec.context_pkg;\n",
+    "\n",
+    "CREATE OR REPLACE PACKAGE context_pkg AS\n",
+    "   PROCEDURE set_app_context(p_level varchar2)l\n",
+    "END;\n",
+    "\n",
+    "CREATE OR REPLACE PACKAGE BODY context_pkg AS\n",
+    "   PROCEDURE set_app_context(p_level varchar2) IS\n",
+    "   BEGIN\n",
+    "      dbms_session.set_context('ORDERS_APP', 'SECURITY_LEVEL', p_level);\n",
+    "   END ;\n",
+    "END;\n",
+    "\n",
+    "```\n",
+    "Now, the final piece is creating a trigger. In this case, when a user logs on, the user's security level is retrieved from the app_context_users table, and it is set in the context:\n",
+    "```sql\n",
+    "CREATE OR REPLACE TRIGGER trg_db_logon\n",
+    "   AFTER logon ON database\n",
+    "DECLARE\n",
+    "   v_level varchar2(255);\n",
+    "BEGIN\n",
+    "   SELECT app_context_value\n",
+    "   INTO v_level\n",
+    "   FROM dbsec.app_context_users\n",
+    "   WHERE user_name = sys_context('USERENV', 'SESSION_USER');\n",
+    "   context_pkg.set_app_context(v_level);\n",
+    "\n",
+    "   EXCEPTION\n",
+    "   WHEN no_data_found\n",
+    "   THEN NULL;\n",
+    "END;\n",
+    "\n",
+    "```\n",
+    "Instead of doing all of this, the **native VPD functionality can be used.** Again, one of the advantages of using VPD is that it's controlled by Oracle; it dynamically controls the WHERE clause so the DBA doesn't have to write the PL/SQL, just write the VPD policies. With VPDs, the security policies are attached to database objects and are automatically enforced throughout the entire database, either at the row or column level. To create a **row-level security filter VPD,** first create a policy function to add a predicate to the WHERE clause:\n",
+    "```sql\n",
+    "CREATE OR REPLACE\n",
+    "FUNCTION rls_dept (obj_owner IN VARCHAR2, obj_name IN VARCHAR2)\n",
+    "RETURN VARCHAR2\n",
+    "AS\n",
+    "   deptno   NUMBER;\n",
+    "   predicate   VARCHAR2(200);\n",
+    "BEGIN\n",
+    "   deptno := SYS_CONTEXT('HR_CONTEXT','DEPT');\n",
+    "   IF deptno is NULL THEN\n",
+    "      PREDICATE := '1=2';\n",
+    "   ELSE\n",
+    "      PREDICATE :='department_id = '||deptno;\n",
+    "   END IF;\n",
+    "   RETURN (PREDICATE);\n",
+    "END rls_dept;\n",
+    "```\n",
+    "Now, generate the VPD policy that will call the previous function:\n",
+    "```sql\n",
+    "BEGIN DBMS_RLS.ADD_POLICY(          --this function is built-in to Oracle\n",
+    "   object_schema=>'SCOTT',          --schema name\n",
+    "   object_name=>'EMP',              --table name\n",
+    "   policy_name=>'restrict_dept_policy',   --policy name\n",
+    "   function_schema=>'SCOTT',           --schema that the function exists\n",
+    "   policy_function=>'rls_dept'         --name of function\n",
+    "   );\n",
+    "END;\n",
+    "\n",
+    "```\n",
+    "To create a **column-level security filter VPD,** the implementation is the same as the RLS. Using the previous example, the `sec_relevant_columns` parameter is added to the policy, enforcing access on the SAL column only:\n",
+    "```sql\n",
+    "BEGIN DBMS_RLS.ADD_POLICY(          --this function is built-in to Oracle\n",
+    "   object_schema=>'SCOTT',          --schema name\n",
+    "   object_name=>'EMP',              --table name\n",
+    "   policy_name=>'restrict_dept_policy',   --policy name\n",
+    "   function_schema=>'SCOTT',           --schema that the function exists\n",
+    "   policy_function=>'rls_dept'         --name of function\n",
+    "   sec_relevant_columns=>'SAL'         --this column is restricted; separate my commas\n",
+    "   );\n",
+    "END;\n",
     "```"
    ]
   }
